--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.22.1
 annotated-types==0.7.0
 anthropic==0.75.0
 anyio==4.12.0
@@ -23,6 +24,7 @@ langchain-core==1.2.5
 langchain-openai==1.1.6
 langgraph==1.0.5
 langgraph-checkpoint==3.0.1
+langgraph-checkpoint-sqlite==3.0.1
 langgraph-prebuilt==1.0.5
 langgraph-sdk==0.3.1
 langsmith==0.5.1
@@ -45,6 +47,7 @@ requests-toolbelt==1.0.0
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
+sqlite-vec==0.1.6
 tenacity==9.1.2
 tiktoken==0.12.0
 tqdm==4.67.1
