--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,109 @@
+# =============================================================================
+# ENVIRONMENT & CONFIGURATION
+# =============================================================================
 .env
+.env.local
+.env.*.local
+.env.prod
+
+# =============================================================================
+# VIRTUAL ENVIRONMENTS
+# =============================================================================
 venv/
+.venv/
+env/
+ENV/
+.venv_*
+
+# =============================================================================
+# PYTHON
+# =============================================================================
 __pycache__/
-*.pyc
-/.idea/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# =============================================================================
+# TESTING & COVERAGE
+# =============================================================================
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.hypothesis/
+coverage.xml
+*.cover
+.pytest_cache
+
+# =============================================================================
+# IDE & EDITOR
+# =============================================================================
+.idea/
 *.iml
+*.iws
+*.ipr
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+.project
+.pydevproject
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# =============================================================================
+# TEMPORARY & LOG FILES
+# =============================================================================
+*.log
+logs/
+*.tmp
+*.temp
+*.bak
+*.backup
+*~
+
+# =============================================================================
+# OS-SPECIFIC
+# =============================================================================
+.DS_Store
+Thumbs.db
+.env.swp
+
+# =============================================================================
+# PROJECT-SPECIFIC
+# =============================================================================
+# Kubernetes config
+kubeconfig
+kubeconfig.*
+.kubeconfig
+
+# Application logs
+logs/
+*.log
+
+# Temporary files
+tmp/
+temp/
+*.tmp
