--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "langchain-core>=0.3.0",
     "langgraph>=0.2.0",
     "kubernetes>=31.0.0",
-    "requests>=2.32.0",
+    "prometheus-api-client>=0.5.0",
     "pydantic>=2.10.0",
     "pydantic-settings>=2.6.0",
     "python-dotenv>=1.0.0",
