--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "pydantic>=2.10.0",
     "pydantic-settings>=2.6.0",
     "python-dotenv>=1.0.0",
+    "fastapi>=0.115.0",
+    "uvicorn[standard]>=0.32.0",
 ]
 
 [project.optional-dependencies]
@@ -31,7 +33,7 @@ dev = [
 ]
 
 [project.scripts]
-kube-medic = "kube_medic.main:main"
+kube-medic = "kube_medic.api:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/kube_medic"]
