Support Prometheus basic auth

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,15 @@ AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
 #   - External: https://prometheus.example.com:9090
 PROMETHEUS_URL=http://prometheus-server.monitoring-system:80
 
+# [Optional] Prometheus basic auth username
+# Required if your Prometheus server has basic authentication enabled
+# PROMETHEUS_USERNAME=your-username
+
+# [Optional] Prometheus basic auth password
+# Required if your Prometheus server has basic authentication enabled
+# IMPORTANT: Keep this secret! Don't commit to version control.
+# PROMETHEUS_PASSWORD=your-password
+
 # [Optional] Prometheus API request timeout in seconds
 # Default: 10
 # PROMETHEUS_TIMEOUT=10
