--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,19 @@
 # ============================================================================
-# AZURE OPENAI CONFIGURATION
+# OPENAI CONFIGURATION
 # ============================================================================
 
-# [Required] Azure OpenAI endpoint URL
-# Format: https://<resource-name>.openai.azure.com/
-# Find in Azure Portal: Search "OpenAI" > Your resource > Endpoints
-AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+# [Required] OpenAI-compatible API base URL
+# For Azure OpenAI: https://<resource-name>.openai.azure.com/openai/v1/
+# For OpenAI: https://api.openai.com/v1/
+OPENAI_BASE_URL=https://your-resource.openai.azure.com/openai/v1/
 
-# [Required] Azure OpenAI API key for authentication
-# Format: 32-character alphanumeric string
-# Find in Azure Portal: OpenAI resource > Keys and Endpoints > Key 1 or Key 2
+# [Required] OpenAI API key for authentication
 # IMPORTANT: Keep this secret! Don't commit to version control.
-AZURE_OPENAI_API_KEY=your-api-key-here
+OPENAI_API_KEY=your-api-key-here
 
-# [Required] Name of your deployed model in Azure
-# Examples: gpt-4, gpt-4-turbo, gpt-35-turbo, gpt-4o
-# Find in Azure Portal: OpenAI resource > Deployments
-AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
-
-# [Optional] Azure OpenAI API version
-# This controls which API features are available
-# See: https://learn.microsoft.com/en-us/azure/ai-services/openai/reference
-# Default: 2024-08-01-preview
-# AZURE_OPENAI_API_VERSION=2024-08-01-preview
+# [Required] Model/deployment name
+# Examples: gpt-5.2, gpt-4o, gpt-4-turbo
+OPENAI_MODEL=gpt-5.2
 
 # [Optional] Temperature: Controls response creativity
 # Range: 0.0 (deterministic) to 2.0 (creative)
